# LiteShell

./: .gitignore  CMakeLists.txt  README.md
LiteShell/: lite_shell.c  lite_shell.h  lite_shell_cfg.c.bak  lite_shell_types.h
examples/: lite_shell_cfg.c  lite_shell_cfg.h  main.c
examples/logger/: logger.h
